# browsergame-engine

./: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs
i18n/: Cargo.toml
i18n/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs  utils.rs
shared/src/utils/: custom_map.rs  entity_set.rs  qty.rs
