[package]
version = "0.1.0"
name = "engine-client"
authors = ["Fabian Bösiger <boesiger.fabian@outlook.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[dependencies]
seed = "0.9"
engine-shared = { path = "../shared" }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
rmp-serde = "1.1.0"