[package]
name = "i18n"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ['derive'] }
strum = { version = "0.26", features = ["derive"] }
smallvec = { version = "1.13" }
seed = { version = "0.10", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Window", "Navigator"] }

[features]
seed = ["dep:seed"]
web-sys = ["dep:web-sys"]