[package]
name = "engine-server"
version = "0.1.0"
edition = "2021"

[dependencies]
engine-shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
rmp-serde = "1.1.0"
rand = { version = "0.8", features = ["small_rng"] }
async-trait = "0.1"
tracing = "0.1"