[package]
name = "engine-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
rmp-serde = "1.1"
sha2 = "0.10"
rand_chacha = "0.3"
strum = { version = "0.25", features = ["derive"] }
fxhash = "0.2"
indexmap = { version = "2.2", features = ["serde"] }
uuid = { version = "1.8", features = ["serde", "v4"] }